[gd_scene load_steps=5 format=3 uid="uid://ctx0ckg4e0fkj"]

[ext_resource type="Script" path="res://scripts/game_over_ui.gd" id="1_qu441"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50o2m"]
bg_color = Color(0.0313726, 0.0784314, 0.117647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j7oy1"]
bg_color = Color(0.305882, 0.286275, 0.372549, 1)
border_width_left = 8
border_width_right = 8
border_color = Color(0.305882, 0.286275, 0.372549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6skos"]
bg_color = Color(0.0313726, 0.0784314, 0.117647, 1)

[node name="GameOverUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qu441")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_50o2m")

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -226.5
offset_right = 226.5
offset_bottom = 265.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="Label" type="Label" parent="Panel/VBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 16

[node name="Label" type="Label" parent="Panel/VBoxContainer2/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Let's try again ..."
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer2/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LabelHighScoreTxt" type="Label" parent="Panel/VBoxContainer2/MarginContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Highest Score:"
horizontal_alignment = 1

[node name="LabelHighScore" type="Label" parent="Panel/VBoxContainer2/MarginContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "5000"

[node name="MarginContainer4" type="MarginContainer" parent="Panel/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 48

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer2/MarginContainer4"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer2/MarginContainer4/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer2/MarginContainer4/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="LabelTotalTime" type="Label" parent="Panel/VBoxContainer2/MarginContainer4/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "TOTAL TIME: "

[node name="LabelTime" type="Label" parent="Panel/VBoxContainer2/MarginContainer4/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "30"
horizontal_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer2/MarginContainer4/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer2/MarginContainer4/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="LabelScoreTxt" type="Label" parent="Panel/VBoxContainer2/MarginContainer4/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SCORE: "

[node name="LabelScore" type="Label" parent="Panel/VBoxContainer2/MarginContainer4/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "30"
horizontal_alignment = 2

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer2/MarginContainer4/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 48
theme_override_constants/margin_bottom = 64

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer2/MarginContainer4/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16
alignment = 1

[node name="ButtonReplay" type="Button" parent="Panel/VBoxContainer2/MarginContainer4/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_j7oy1")
theme_override_styles/hover = SubResource("StyleBoxFlat_6skos")
text = "REPLAY"

[node name="ButtonHome" type="Button" parent="Panel/VBoxContainer2/MarginContainer4/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_j7oy1")
theme_override_styles/hover = SubResource("StyleBoxFlat_6skos")
text = "HOME"

[connection signal="pressed" from="Panel/VBoxContainer2/MarginContainer4/VBoxContainer/MarginContainer3/HBoxContainer/ButtonReplay" to="." method="_on_button_replay_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/MarginContainer4/VBoxContainer/MarginContainer3/HBoxContainer/ButtonHome" to="." method="_on_button_home_pressed"]
